# nxp_omniman_ws

./: .gitignore  README.md  about_ros2_coordinate.md  about_ssh_display.md  about_use_sim.md
cybergear_hardware/: .gitignore  README.md  about_axis_direction.md  about_can.md  about_socketcan.md  bringup_canbus.sh  canbus_init.sh  settings.json
cybergear_hardware/cybergear_control/: CMakeLists.txt  README.md  cybergear_control.xml
cybergear_hardware/cybergear_control/config/controller/: 1dof_position_control.yaml  multi_dof_position_control.yaml  nxp_upper_body_control.yaml
cybergear_hardware/cybergear_control/config/rviz/: nxp_upper_body_config.rviz
cybergear_hardware/cybergear_control/description/ros2_control/: 1dof.ros2_control.urdf.xacro  multi_dof.ros2_control.urdf.xacro  nxp_upper_body.ros2_control.urdf.xacro  robstride.ros2_control.urdf.xacro
cybergear_hardware/cybergear_control/description/urdf/: 1dof.urdf.xacro  multi_dof.urdf.xacro  nxp_upper_body.urdf.xacro
cybergear_hardware/cybergear_control/include/: realtime_buffer.hpp
cybergear_hardware/cybergear_control/include/cybergear_control/: cybergear_hardware_interface.hpp
cybergear_hardware/cybergear_control/launch/: nxp_upper_body.launch.py  view_1dof.launch.py  view_multi_dof.launch.py
cybergear_hardware/cybergear_control/src/: cybergear_hardware_interface.cpp
cybergear_hardware/cybergear_maintenance_tools/src/: change_cybergear_id_node.cpp
dynamixel_hardware/: about_udev.md
dynamixel_hardware/dynamixel_hardware_interface/: CMakeLists.txt
dynamixel_hardware/dynamixel_hardware_interface/ros2_control/: dynamixel_motor.ros2_control.xacro
dynamixel_hardware/dynamixel_hardware_interface/scripts/: 99-manipulator-cdc.rules
omniman_commander/: CMakeLists.txt  package.xml
omniman_commander/launch/: commander.launch.py  commander1.launch.py  commander2.launch.py  fira_mission_yolo.launch.py  line_detection_test.launch.py  line_follower.launch.py  mission_runner.launch.py  position.launch.py  quaternion_test.launch.py  traffic_mission.launch.py
omniman_commander/scripts/: camera_viewer.py  line_detection_test.py  line_follower_pid.py  mission_runner.py  robosot_pickplace_mission.py  traffic_mission.py  yolo_target_publisher.py
omniman_commander/src/: commander.cpp  commander1.cpp  commander2.cpp  drive_distance.cpp  drive_rectangle.cpp  fira_mission_yolo.cpp  position.cpp  quaternion_test.cpp  robosot_arm_server.cpp  robosot_fira_mission.cpp
omniman_description/: CMakeLists.txt  about_debugging.md  package.xml
omniman_description/config/: config.rviz
omniman_description/launch/: description_launch.py
omniman_description/meshes/visual/Front_left_wheel/: Front_left_couple_link.STL
omniman_description/meshes/visual/Front_right_wheel/: Front_right_couple_link.STL  Front_right_roller_link8.STL
omniman_description/meshes/visual/Lidar/: Lidar_link.STL
omniman_description/meshes/visual/Manipulator/: Arm_link.STL  Forearm_link.STL  Left_finger_link.STL  Palm_link.STL  Right_finger_link.STL  Shoulder_link.STL  Upper_shoulder_link.STL  Wrist_link.STL
omniman_description/meshes/visual/Rear_left_wheel/: Rear_left_roller_link3.STL
omniman_description/meshes/visual/Rear_right_wheel/: Rear_right_couple_link.STL  Rear_right_roller_link5.STL
omniman_description/urdf/: omniman.urdf  omniman.urdf.xacro  omniman.usd  omniman_isaac.urdf
omniman_description/urdf/omniman_isaac/: omniman_isaac.usd
omniman_description/urdf/omniman_isaac/configuration/: omniman_isaac_physics.usd  omniman_isaac_robot.usd  omniman_isaac_sensor.usd
omniman_moveit_config/: .setup_assistant  CMakeLists.txt  about_moveit.md  package.xml
omniman_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  nxp_omniman.ros2_control.xacro  nxp_omniman.srdf  nxp_omniman.urdf.xacro  ros2_controllers.yaml
omniman_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
omniman_navigation/: CMakeLists.txt  package.xml
omniman_navigation/config/: nav2_config.rviz  slam_toolbox.yaml
omniman_navigation/launch/: nav2_launch.py  slam_launch.py
omniman_navigation/maps/: my_map.pgm  my_map.yaml
omniman_navigation/scripts/: twist_to_twist_stamped.py
omniman_ros2_control/: CMakeLists.txt  about_joystick.md  package.xml
omniman_ros2_control/config/: controllers.yaml  ekf.yaml  joystick.yaml  nav2_config.rviz  nav2_params.yaml  slam_toolbox.yaml  slam_toolbox_config.rviz
omniman_ros2_control/description/: nxp_omniman.urdf.xacro
omniman_ros2_control/launch/: nav2_launch.py  nxp_omniman_launch.py  slam_launch.py
rf2o_laser_odometry/src/: CLaserOdometry2D.cpp
rplidar_ros/launch/: rplidar_a2m12_launch.py
